# openenv-sql-debugger

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  readme.md  requirements.txt  sql.md
core/: __init__.py  grader.py  tasks.py
database/: __init__.py  sqlite_manager.py
hf/: pre-validation-script.py
server/: app.py  environment.py  playground.html
