[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlagent-openenv"
version = "0.1.0"
description = "SQL-RL (OpenEnv): SQL analytics environment with deterministic graders for agent evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.1",
  "uvicorn>=0.30.1",
  "openenv-core",
  "pandas",
  "openai",
  "python-dotenv",
]

[project.scripts]
server = "server.app:main"
